--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{default}">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="default">
 
 <head>
   <title>회원가입</title>
 </head>
 
-<body>
+<body class="text-center">
   <div layout:fragment="content">
     <form class="form-signin" th:action="@{/signup}" method="POST">
       <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72" />
-      <h1 class="h3 mb-3 font-weight-normal">APP_NAME</h1>
+      <h1 class="h3 mb-3 font-weight-normal">OH AUTH</h1>
       <div th:if="${param.error}">
         아이디와 비밀번호 일치하지 않음
       </div>
