--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,8 +7,8 @@
 
 <body>
   <div layout:fragment="content">
-    <h1>안녕하세요!</h1>
-    <p><a th:href="@{/user}">여기</a>를 눌러 회원에게만 제공되는 컨텐츠를 즐기세요!</p>
+    <h1>안녕하세요! OHAUTH 등록</h1>
+    <p><a th:href="@{/app/view/all}">여기</a>를 눌러 회원에게만 제공되는 OHAUth 서비스를 즐기세요!</p>
   </div>
 </body>
 
