clean code - not deployed

--- a/src/main/resources/templates/findPassword.html
+++ b/src/main/resources/templates/findPassword.html
@@ -2,14 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="default">
 
 <head>
-  <title>Login</title>
+  <title>비밀번호 찾기</title>
 </head>
 
 <body class="text-center">
   <div layout:fragment="content">
     <form class="form-signin" th:action="@{/findPasswordByUsername}" method="GET">
-      <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72" />
-      <h1 class="h3 mb-3 font-weight-normal">OH AUTH</h1>
+      <h1 class="h3 mb-3 font-weight-normal">비밀번호 찾기</h1>
       <div th:if="${param.error}">
         가입되어 있는 아이디가 없습니다.
       </div>
