--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="default">
 
 <head>
-  <title>OH AUTH</title>
+  <title>홈</title>
 </head>
 
 <body>
   <div layout:fragment="content">
-    <h1>안녕하세요! OHAUTH 등록</h1>
-    <p><a th:href="@{/app/view/all}">여기</a>를 눌러 회원에게만 제공되는 OHAUth 서비스를 즐기세요!</p>
+    <h1>안녕하세요, OHAUTH 등록 페이지에 오신걸 환영합니다.</h1>
+    <p><a th:href="@{/app/view/all}">여기</a>를 눌러 회원에게만 제공되는 OHAUTH 서비스를 즐기세요!</p>
   </div>
 </body>
 
