--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,6 +13,16 @@ body {
   background-color: #f5f5f5;
 }
 
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+h1 {
+    margin-top: 30px;
+}
+
 .form-signin {
   width: 100%;
   max-width: 330px;
@@ -46,3 +56,4 @@ body {
 .form-signin input[type="text"] {
   margin-bottom: 10px;
 }
+
