--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 <body class="text-center">
   <div layout:fragment="content">
     <form class="form-signin" th:action="@{/login}" method="POST">
-      <h1 class="h3 mb-3 font-weight-normal">OH AUTH</h1>
+      <h1 class="h3 mb-3 font-weight-normal">로그인</h1>
       <div th:if="${param.error}">
         아이디와 비밀번호 일치하지 않음
       </div>
