--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>회원 정보</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
 <body class="text-center">
@@ -13,6 +14,7 @@
       <button class="btn btn-md btn-success btn-block" type="Submit">로그아웃</button>
     </form>
   </div>
+
 </body>
 
 </html>
