--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,8 +14,9 @@
       </div>
       <label for="inputName" class="sr-only">앱 이름</label>
       <input type="text" name="name" id="inputName" class="form-control" placeholder="App Name" required="" />
-      <label for="inputHomepageUrl" class="sr-only">앱 홈페이지 URL</label>
-      <input type="text" name="homepageUrl" id="inputHomepageUrl" class="form-control" placeholder="App Homepage URL" required="" />
+
+      <label for="inputRedirectUri" class="sr-only">Redirect URL</label>
+      <input type="text" name="redirectUri" id="inputRedirectUri" class="form-control" placeholder="Redirect URL" required="" />
       <button class="btn btn-lg btn-primary btn-block" type="submit">등록</button>
     </form>
   </div>
